--- a/.github/workflows/PrintSoftwareVersions.yml
+++ b/.github/workflows/PrintSoftwareVersions.yml
@@ -13,6 +13,8 @@ jobs:
         run: node --version
       - name: Print Maven/Gradle Version
         run: mvn --version
+      - name: Print C++ Compiler Version (GCC)
+        run: g++ --version
   PrintDBMSVersions:
     name: Database Server (AL) Versions (SQL DB)
     runs-on: ubuntu-latest
@@ -20,5 +22,5 @@ jobs:
     steps:
       - name: Print PostgreSQL Version
         run: psql --version
-      - name: Print MySQL Version
-        run: mysql --version
+      - name: Print MinIO Client Version
+        run: mc --version
